[tool.poetry]
name = "uniswap-python-swapper"
version = "0"
description = ""
authors = ["max-bytekerk <max@dclflabs.xyz>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
web3 = "^7.10.0"
eth-account = "^0.13.7"
eth-abi = "^5.2.0"
uniswap-universal-router-decoder = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
